trunk/Archive2/9a/66b3aab0c7443e/output
main.cpp: In function ‘int main()’:
main.cpp:10:16: error: zero-size array ‘a’
     int a[] = {};
                ^
